--- a/web/front/package.json
+++ b/web/front/package.json
@@ -44,10 +44,11 @@
     "@vue/cli-plugin-pwa": "~5.0",
     "@vue/cli-plugin-vuex": "~5.0",
     "@vue/cli-service": "~5.0",
-    "cli-color": "^2.0.0",
+    "css-loader": "^6.7.3",
     "esm": "^3.2.25",
     "jsdom": "^20.0.1",
-    "less-loader": "^11.1.0",
+    "less": "^4.1.3",
+    "less-loader": "^7.3.0",
     "mocha": "^10.1.0",
     "mocha-junit-reporter": "^2.1.0",
     "mochapack": "^2.1.4",
