--- a/web/front/package.json
+++ b/web/front/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@babel/register": "^7.18.9",
     "@types/node": "^17.0.0",
+    "@vue/babel-plugin-jsx": "^1.1.1",
     "@vue/cli-plugin-babel": "~5.0",
     "@vue/cli-plugin-pwa": "~5.0",
     "@vue/cli-plugin-vuex": "~5.0",
